--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,39 +1,55 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{parthasarathy2022defer,
+  title={DEFER: distributed edge inference for deep neural networks},
+  author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
+  booktitle={2022 14th International Conference on COMmunication Systems \& NETworkS (COMSNETS)},
+  pages={749--753},
+  year={2022},
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/abstract/document/9668515/},
+  arxiv={https://arxiv.org/abs/2201.06769},
+  pdf={https://arxiv.org/pdf/2201.06769},
+  additional_info={Best Paper Award},
+  selected={true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{parthasarathy2022seifer,
+  title={SEIFER: Scalable Edge Inference for Deep Neural Networks},
+  author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
+  journal={Workshop on Challenges in Deploy and Monitoring ML Systems, Conference on Neural Information
+  Processing Systems (NeurIPS)},
+  year={2022},
+  arxiv={https://arxiv.org/abs/2210.12218},
+  pdf={https://arxiv.org/pdf/2210.12218},
+  selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{parthasarathy2022partitioning,
+  title={Partitioning and placement of deep neural networks on distributed edge devices to maximize inference throughput},
+  author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
+  booktitle={2022 32nd International Telecommunication Networks and Applications Conference (ITNAC)},
+  pages={239--246},
+  year={2022},
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/abstract/document/9998427/},
+  arxiv={https://arxiv.org/abs/2210.12219},
+  pdf={https://arxiv.org/pdf/2210.12219},
+  selected={true}
 }
 
-@article{PhysRev.47.777,
+@article{parthasarathy2023partitioning,
+  title={Partitioning and deployment of deep neural networks on edge clusters},
+  author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
+  journal={arXiv preprint},
+  year={2023},
+  arxiv={https://arxiv.org/abs/2304.11941},
+  pdf={https://arxiv.org/pdf/2304.11941},
+  selected={false}
+}
+
+article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
@@ -57,59 +73,6 @@
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
+  selected={false},
   inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
 }
