--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @inproceedings{parthasarathy2022defer,
-  title={DEFER: distributed edge inference for deep neural networks},
+  title={DEFER: Distributed Edge Inference for Deep Neural Networks},
   author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
   booktitle={2022 14th International Conference on COMmunication Systems \& NETworkS (COMSNETS)},
   pages={749--753},
@@ -11,7 +11,7 @@
   url={https://ieeexplore.ieee.org/abstract/document/9668515/},
   arxiv={https://arxiv.org/abs/2201.06769},
   pdf={https://arxiv.org/pdf/2201.06769},
-  additional_info={Best Paper Award},
+  additional_info={ Best Paper Award},
   selected={true}
 }
 
@@ -27,7 +27,7 @@
 }
 
 @inproceedings{parthasarathy2022partitioning,
-  title={Partitioning and placement of deep neural networks on distributed edge devices to maximize inference throughput},
+  title={Partitioning and Placement of Deep Neural Networks on Distributed Edge Devices to Maximize Inference Throughput},
   author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
   booktitle={2022 32nd International Telecommunication Networks and Applications Conference (ITNAC)},
   pages={239--246},
@@ -40,7 +40,7 @@
 }
 
 @article{parthasarathy2023partitioning,
-  title={Partitioning and deployment of deep neural networks on edge clusters},
+  title={Partitioning and Deployment of Deep Neural Networks on Edge Clusters},
   author={Parthasarathy, Arjun and Krishnamachari, Bhaskar},
   journal={arXiv preprint},
   year={2023},
